# tinybrain

./: .gitignore  .rules.verible_lint  MODULE  README.md  flake.nix
RULES/tinybrain/bluespec/: dep.go  library.go  simulation.go
src/tinybrain/cpu/: Alu.bsv  BUILD.go  BranchAlu.bsv  Cpu.bsv  Decoder.bsv
src/tinybrain/cpu/test/: BUILD.go
src/tinybrain/cpu/test/resources/: cpu_inst_mem.txt
src/tinybrain/fpga/arty-a7/: BUILD.go  arty.xdc  top.sv
src/tinybrain/fpga/cpu/: CoreMemory.bsv  RegisterFile.bsv  Types.bsv
src/tinybrain/fpga/cpu/test/: AluTestBench.bsv  BUILD.go  CoreMemoryTestBench.bsv  DecoderTestBench.bsv  RegisterFileTestBench.bsv  TestBench.bsv
src/tinybrain/fpga/cpu/test/resources/: BUILD.go  core_memory_contents.txt  cpu_data_mem.txt
src/tinybrain/fpga/fifo/: BUILD.go  cdc_fifo.sv  fifo.sv
src/tinybrain/fpga/fifo/test/: BUILD.go  cdc_fifo_tb.sv  fifo_tb.sv
src/tinybrain/fpga/fmc/: BUILD.go  fmc.sv  fmc_data_bus.sv
src/tinybrain/fpga/fmc/test/: BUILD.go  fmc_tb.sv
src/tinybrain/fpga/uart/: BUILD.go  uart_tx.sv
src/tinybrain/fpga/uart/test/: BUILD.go  uart_tb.sv
src/tinybrain/fpga/utils/: BUILD.go  cdc_sync.sv  reset.sv  utils_pkg.sv
src/tinybrain/fpga/utils/test/: BUILD.go  cdc_sync_tb.sv  utils_pkg_tb.sv
src/tinybrain/sw/: BUILD.go
src/tinybrain/sw/forth/: Cargo.toml
src/tinybrain/sw/forth/src/: lib.rs  main.rs
src/tinybrain/sw/tinybrain-fw/: Cargo.toml  memory.x
src/tinybrain/sw/tinybrain-fw/.cargo/: config.toml
src/tinybrain/sw/tinybrain-fw/src/: fmc.rs  init.rs  main.rs
